--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,13 @@ matrix:
     - php: "5.6"
     - php: "7.0"
     - php: "7.1"
+      env: MONKEY_PATCH=true
     - php: "7.2"
+      env: MONKEY_PATCH=true
     - php: "7.3"
+      env: MONKEY_PATCH=true
     - php: "7.4"
+      env: MONKEY_PATCH=true
 
 install:
   - |
@@ -31,12 +35,18 @@ install:
     # Export Composer's global bin dir to PATH, but not on PHP 5.2 (borrowed from Wordpress):
     if [[ $PHP52SUCKS != true ]]; then
       composer config --list --global
-      export PATH=`composer config --list --global | grep '\[home\]' | { read a; echo "${a#* }/vendor/bin:$PATH"; }`
+      export COMPOSER_GLOBAL=`composer config --list --global | grep '\[home\]' | { read a; echo "${a#* }"; }`
+      export PATH="${COMPOSER_GLOBAL}/vendor/bin:$PATH"
     fi
   - |
     # Global install of a supported PHPUnit version
     if [[ $PHP52SUCKS != true ]]; then
       composer global require "phpunit/phpunit=^3.7|^4.8|^5.7"
+    fi
+  - |
+    # Monkey patch phpunit/phpunit-mock-objects
+    if [[ $MONKEY_PATCH == true ]]; then
+      cp tests/MockObjectGenerator.patched.php ${COMPOSER_GLOBAL}/vendor/phpunit/phpunit-mock-objects/src/Framework/MockObject/Generator.php
     fi
 
 script:
