--- a/composer.json
+++ b/composer.json
@@ -19,16 +19,17 @@
         }
     ],
     "support": {
-        "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=HTML_QuickForm2",
+        "issues": "https://github.com/pear/HTML_QuickForm2/issues",
         "source": "https://github.com/pear/HTML_QuickForm2",
         "docs":   "https://pear.php.net/manual/en/package.html.html-quickform2.php"
     },
     "require": {
+        "php":                 ">=5.4.0",
         "pear/pear_exception": "^1.0",
         "pear/html_common2":   "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit":     "^3.7|^4.8|^5.7"
+        "phpunit/phpunit":     "^4.8|^5.7"
     },
     "autoload": {
         "psr-0": {
