--- a/package.xml
+++ b/package.xml
@@ -42,9 +42,9 @@
   <email>golgote@mamasam.com</email>
   <active>yes</active>
  </lead>
- <date>2021-05-09</date>
+ <date>2021-06-25</date>
  <version>
-  <release>2.2.1</release>
+  <release>2.2.2</release>
   <api>2.0.1</api>
  </version>
  <stability>
@@ -53,12 +53,8 @@
  </stability>
  <license uri="https://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</license>
  <notes>
- * Depend on newer HTML_Common2 that does not cause problems with optimized
-   composer autoloader, see https://github.com/pear/HTML_QuickForm2/issues/4
- * Consistently use HTML_Common2::OPTION_* constants for document-wide
-   option names, define and use additional HTML_QuickForm2_Node::OPTION_*
-   constants instead of directly using 'language', 'id_force_append_index'
-   and 'nonce' strings
+ * Incorrect option name used in HTML_QuickForm2_Element_Script::__toString()
+   Thanks to Julian Striegl (striegljulian at gmail dot com) for reporting
  </notes>
  <contents>
   <dir name="/">
@@ -733,6 +729,26 @@
   </filelist>
  </phprelease>
  <changelog>
+  <release>
+   <date>2021-05-09</date>
+   <version>
+    <release>2.2.1</release>
+    <api>2.0.1</api>
+   </version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api>
+   </stability>
+   <license uri="https://opensource.org/licenses/BSD-3-Clause">BSD 3-Clause License</license>
+   <notes>
+ * Depend on newer HTML_Common2 that does not cause problems with optimized
+   composer autoloader, see https://github.com/pear/HTML_QuickForm2/issues/4
+ * Consistently use HTML_Common2::OPTION_* constants for document-wide
+   option names, define and use additional HTML_QuickForm2_Node::OPTION_*
+   constants instead of directly using 'language', 'id_force_append_index'
+   and 'nonce' strings
+   </notes>
+  </release>
   <release>
    <date>2020-09-14</date>
    <version>
