--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
         "docs":   "https://pear.php.net/manual/en/package.html.html-quickform2.php"
     },
     "require": {
-        "php":                 ">=5.4.0",
+        "php":                 ">=5.6.0",
         "pear/pear_exception": "^1.0",
         "pear/html_common2":   "^2.2"
     },
     "require-dev": {
-        "phpunit/phpunit":     "^4.8|^5.7"
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "autoload": {
         "psr-0": {
@@ -38,7 +38,6 @@
         "exclude-from-classmap": ["docs/"]
     },
     "autoload-dev": {
-        "classmap": ["tests/"],
-        "exclude-from-classmap": ["tests/MockObjectGenerator.original.php", "tests/MockObjectGenerator.patched.php"]
+        "classmap": ["tests/"]
     }
 }
