Enable CI on Github

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /.gitattributes export-ignore
+/.github export-ignore
 /.gitignore export-ignore
 /package.xml export-ignore
 /pear-package-helper.php export-ignore
