Use psalm on level 5, update incorrect type hints

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 /.gitignore export-ignore
 /package.xml export-ignore
 /pear-package-helper.php export-ignore
+/psalm.xml export-ignore
 /docs/examples export-ignore
 /js export-ignore
 /tests export-ignore
