--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "pear/html_common2":   "^2.3"
     },
     "require-dev": {
-        "yoast/phpunit-polyfills": "^1.0"
+        "yoast/phpunit-polyfills": "^1.0",
+        "vimeo/psalm": "^4.22"
     },
     "autoload": {
         "psr-0": {
