--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         operating-system: ['ubuntu-latest']
         php-version: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1']
+        composer-flags: ['--ignore-platform-req=php']
 
     name: CI on ${{ matrix.operating-system }} with PHP ${{ matrix.php-version }}
 
