Remove psalm from composer.json, try to install in the job

--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,7 @@
         "pear/html_common2":   "^2.3"
     },
     "require-dev": {
-        "yoast/phpunit-polyfills": "^1.0",
-        "vimeo/psalm": "^4.22"
+        "yoast/phpunit-polyfills": "^1.0"
     },
     "autoload": {
         "psr-0": {
