--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -46,6 +46,10 @@ jobs:
         run: |
           composer update --no-interaction --prefer-dist --no-progress ${{ matrix.composer-flags }}
 
+      - name: Install psalm
+        run: |
+          composer require --dev "vimeo/psalm:^4.22"
+
       - name: Run a static analysis with vimeo/psalm
         run: |
           vendor/bin/psalm --output-format=github
